[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,28 @@
 <html>
+    <head>
+        <title>
+             Article one | SRB 
+        </title>
+    </head>
+<body>
+    <div>
+        <a href="/">HOME</a>
+    </div>   
+    <h3>
+        Article One
+    </h3>
+    <div>
+        August 15
+    </div>
+    <div>
+        <p>
+            This is article one. We are adding html pages to our code console.We are observing the changes.
+        </p>
+    </div>
+    <div>
+        <p>
+            This is article one. We are adding html pages to our code console.We are observing the changes.
+        </p>
+    </div>
+</body>
 </html>
