[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
              Article one | SRB 
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
 <body>
     <div>
@@ -13,9 +14,7 @@
         Article One
     </h3>
     <div>
-    <h3>
         August 15
-    </h3>
     </div>
     <div>
         <p>
