--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,16 @@
              Article one | SRB 
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+        </style>
     </head>
 <body>
+    <div class="container">
     <div>
         <a href="/">HOME</a>
     </div>   
@@ -25,6 +33,7 @@
         <p>
             This is article one. We are adding html pages to our code console.We are observing the changes.
         </p>
+    </div>
     </div>
 </body>
 </html>
