[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -16,6 +16,7 @@
         </style>
     </head>
 <body>
+    <div class="container">
     <div>
         <a href="/">HOME</a>
     </div>   
@@ -30,6 +31,7 @@
         <p>
             This is article three. We are adding html pages to our code console.We are observing the changes.
         </p>
+    </div>
     </div>
 </body>
 </html>
