--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
 <body>
+    <div class="container">
     <div>
         <a href="/">HOME</a>
     </div>   
@@ -25,6 +26,7 @@
         <p>
             This is content of article two. We are adding html pages to our code console.We are observing the changes.
         </p>
+    </div>
     </div>
 </body>
 </html>
