--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="http://www.planwallpaper.com/static/images/which-anime-character-are-you-quiz.jpg" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I'm Shivani & this is my first webapp.
-        </div>
+        <div class="container">
+            <div class="center">
+                <img src="http://www.planwallpaper.com/static/images/which-anime-character-are-you-quiz.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi my name is Shivani!
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I'm an engineering student.
+            </div>
+            <hr/>
+            <div class="footer"></div>
+        </div>    
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
