--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,9 @@
                 I'm an engineering student.
             </div>
             <hr/>
-            <div class="footer"></div>
+            <div class="footer">
+                This button<button id="counter">Click me!</button> has been clicked<span id="Count">0</span> times.
+            </div>
         </div>    
         <script type="text/javascript" src="/ui/main.js">
         </script>
